# project/bin/server.py
@@ -249,7 +249,7 @@ REFERENCE_TABLES = {
     'kb_knowledge',
     'cmdb_ci', 'cmdb_rel_ci',
     'sys_choice', 'core_company', 'cmn_department', 'cmn_location', 'cmn_cost_center',
-    'sys_journal_field', 'sys_audit', 'sys_attachment',
+    'sys_journal_field', 'sys_audit', 'sys_attachment', 'sys_email',
     'task_ci', 'task_sla', 'sysapproval_approver',
     'sc_cat_item', 'item_option_new', 'sc_item_option', 'sc_item_option_mtom',
     'question', 'question_choice',
@@ -458,6 +458,7 @@ HR_PARENT_COLUMN = {
     'sys_journal_field': 'element_id',
     'sys_audit':         'documentkey',
     'sys_attachment':    'table_sys_id',
+    'sys_email':         'instance',
     'task_ci':           'task',
     'task_sla':          'task',
     'incident_task':     'parent',
